# anthropic-tools

./: .pre-commit-config.yml  pyproject.toml
tool_use_package/: openai_tool_converter.py
tool_use_package/tools/: openai_adapter.py
